feat(cart): Make cart works without JS, and display message

--- a/views/public/links.phtml
+++ b/views/public/links.phtml
@@ -13,5 +13,6 @@
 		data-cart-action="add"
 		data-cart-item-id="<?php echo $item->id; ?>"
 		><?php echo __('Add to cart') ?></a>
+	<div id="cart-message" class="<?php echo implode(',', $messenger['class']); ?>"><?php echo implode(',', $messenger['message']); ?></div>
 </div>
 
